[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "cli-builder-ai-mcp"
version = "1.0.0"
description = "Cli Builder Ai automation via MCP. Includes generate argparse, generate click, parse help text. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "cli", "builder"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/cli-builder-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
cli_builder_ai_mcp = "server:main"
